--- a/training/1.html
+++ b/training/1.html
@@ -14,11 +14,11 @@
        // var a=10;
        // document.write(a);
         
-     /*    let a= (x,y) => {
+       let a= (x,y) => {
          console.log(x+y)
          console.log(x-y)
          }
-         s1(4,6) */
+         s1(4,6) 
        //  <p id="s1"> Sunny</p>
         document.getElementById("s1").innerHTML="murali"
         
