--- a/training/1.html
+++ b/training/1.html
@@ -18,12 +18,14 @@
          console.log(x+y)
          console.log(x-y)
          }
+         
          s1(4,6) 
        //  <p id="s1"> Sunny</p>
         document.getElementById("s1").innerHTML="murali"
         
        </script>        
                <p id="s1">anji
+                <p>sai</p>
 
     </body>
 </html>
