--- a/11-07-25.html
+++ b/11-07-25.html
@@ -54,7 +54,7 @@
                 document.write("Division (a1/b1)= "+(a1/b1) +"<br>");
                 </script>
             
-           <p>Hi dinesh</p>
+           <p>Hi Saitej</p>
         </body>
     </head>
 </html>
